Make java 8 compatible